crates/ui/tests/snapshots/snapshots__auth_code_entry_no_error_140x40.snap
---
source: crates/ui/tests/snapshots.rs
expression: "render(140, 40, &state)"
---
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                             ┌────────────────── Enter code ──────────────────┐                                             
                                             │SMS to +1***34 (5 digits)                       │                                             
                                             │┌ Code ────────────────────────────────────────┐│                                             
                                             ││123                                           ││                                             
                                             │└──────────────────────────────────────────────┘│                                             
                                             │                                                │                                             
                                             │                                                │                                             
                                             │⏎ confirm                                       │                                             
                                             │                                                │                                             
                                             │                                                │                                             
                                             └────────────────────────────────────────────────┘
