crates/ui/tests/snapshots/snapshots__auth_code_entry_with_error_100x30.snap
---
source: crates/ui/tests/snapshots.rs
expression: "render(100, 30, &state)"
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                         ┌────────────────── Enter code ──────────────────┐                         
                         │SMS to +1***34 (5 digits)                       │                         
                         │┌ Code ────────────────────────────────────────┐│                         
                         ││0000                                          ││                         
                         │└──────────────────────────────────────────────┘│                         
                         │code invalid                                    │                         
                         │                                                │                         
                         │⏎ confirm                                       │                         
                         │                                                │                         
                         │                                                │                         
                         └────────────────────────────────────────────────┘
