crates/ui/tests/snapshots/snapshots__auth_qr_screen_100x30.snap
---
source: crates/ui/tests/snapshots.rs
expression: "render(100, 30, &state)"
---
                          Scan this QR code with Telegram on another device                         
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                     █▀▀▀▀▀█  ▀▄▄█▄▀██ █▀▀▀▀▀█                                      
                                     █ ███ █ ▀██▄▀ █ ▄ █ ███ █                                      
                                     █ ▀▀▀ █  ▄▀  ▄▀█▀ █ ▀▀▀ █                                      
                                     ▀▀▀▀▀▀▀ █▄█ █ █ █ ▀▀▀▀▀▀▀                                      
                                     ██▀ █▀▀██ ██▀  ▀███  ▄█ ▄                                      
                                     ▀ █▄▀ ▀█▀▀ ▄▀▄ ▄▄█▄██▄  █                                      
                                     ▀█ ▀▄▀▀█▄▄ ▄▄▀█ █ █   ▄██                                      
                                     ▀▄▀▀ ▀▀█▄▄▀▄█ █  ▀▄▀ █ █▀                                      
                                     ▀  ▀ ▀▀▀█ ▄▄▀▄▀██▀▀▀█ ▄▀█                                      
                                     █▀▀▀▀▀█ █  ▀▀▀▄▀█ ▀ █▀ ▀▀                                      
                                     █ ███ █ ▀ ▄ ▀▀  █▀▀██ ▄ ▀                                      
                                     █ ▀▀▀ █ █ █▄▄ ▀█▄▀ ▀█ ▀▄▀                                      
                                     ▀▀▀▀▀▀▀ ▀▀ ▀ ▀ ▀▀ ▀▀   ▀▀                                      
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                   Sign in with phone number instead                                
                              Settings → Devices → Link Desktop Device                              
                                        ↑↓ select · ⏎ confirm
