crates/ui/tests/snapshots/snapshots__conversation_reactions_and_receipts_140x30.snap
---
source: crates/ui/tests/snapshots.rs
expression: "render(140, 30, &state)"
---
                              │                                                                                                             
 CHATS                        │ Alice Müller                                                                                                
                              ├─────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ▏ Alice Müller             2 │                                                                                                             
   Team Rust                9 │                                                                                                             
   Bob                        │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │ ▏ Alice · 22:13                                                                                             
                              │ ▏ final answer                                                                                              
                              │ ▏ 👍  3  ❤ 1                                                                                                 
                              │                                                                                                             
                              │                                                                                               You · 22:14 ▏ 
                              │                                                                                                  on it ✓✓ ▏ 
                              │                                                                                                    done ✓ ▏ 
                              │                                                                                                             
                              │ ╭─────────────────────────────────────────────────────────────────────────────────────────────────────────╮ 
                              │ │ ›  message…                                                                                             │ 
                              │ ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────╯ 
                                                                                                                                            
 ⏎ send   alt+⏎ newline   ↑ select messages
