crates/ui/tests/snapshots/snapshots__delete_modal_with_revoke_140x40.snap
---
source: crates/ui/tests/snapshots.rs
expression: "render(140, 40, &state)"
---
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                         ┌─── Delete message? ────┐                                                         
                                                         │                        │                                                         
                                                         │      Delete for me     │                                                         
                                                         │   Delete for everyone  │                                                         
                                                         │                        │                                                         
                                                         │ ⏎ confirm · esc cancel │                                                         
                                                         └────────────────────────┘
