crates/ui/tests/snapshots/snapshots__delete_modal_without_revoke_100x30.snap
---
source: crates/ui/tests/snapshots.rs
expression: "render(100, 30, &state)"
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                     ┌─── Delete message? ────┐                                     
                                     │                        │                                     
                                     │      Delete for me     │                                     
                                     │                        │                                     
                                     │ ⏎ confirm · esc cancel │                                     
                                     └────────────────────────┘
