crates/ui/tests/snapshots/snapshots__file_cards_downloading_and_complete_140x30.snap
---
source: crates/ui/tests/snapshots.rs
expression: "render(140, 30, &state)"
---
                              │                                                                                                             
 CHATS                        │ Alice Müller                                                                                                
                              ├─────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ▏ Alice Müller             2 │                                                                                                             
   Team Rust                9 │ ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────┐ 
   Bob                        │ │                                                                                                         │ 
                              │ │                                                                                                         │ 
                              │ │                                                                                                         │ 
                              │ │                                                                                                         │ 
                              │ │                                                                                                         │ 
                              │ │                                                                                                         │ 
                              │ │                                                                                                         │ 
                              │ │                                                                                                         │ 
                              │ │                                                                                                         │ 
                              │ │                                                                                                         │ 
                              │ │                                                                                                         │ 
                              │ │                                                                                                         │ 
                              │ │                                                                                                         │ 
                              │ │Bob · 22:13                                                                                              │ 
                              │ │▏ 📎  architecture.pdf · 2.4 MB                                                                           │ 
                              │ │  📎  architecture.pdf · ▓▓▓░░░░░░░ 40%                                                                   │ 
                              │ │▏ 📎  notes.pdf · 125.0 KB                                                                                │ 
                              │ │  📎  notes.pdf · 125.0 KB · ⏎ open                                                                       │ 
                              │ └─────────────────────────────────────────────────────────────────────────────────────────────────────────┘ 
                              │                                                                                                             
                              │ ╭─────────────────────────────────────────────────────────────────────────────────────────────────────────╮ 
                              │ │ ›  message…                                                                                             │ 
                              │ ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────╯ 
                                                                                                                                            
 ⏎ send   alt+⏎ newline   ↑ select messages
