crates/ui/tests/snapshots/snapshots__palette_empty_query_recency_then_commands_100x30.snap
---
source: crates/ui/tests/snapshots.rs
expression: "render(100, 30, &state)"
---
                              │                                                                     
 CHATS                        │ telegram-tui                                                        
                              ├─────────────────────────────────────────────────────────────────────
 ▏ Alice Müller             2 │                                                                     
   Team Rust                9 │ ┌─────────────────────────────────────────────────────────────────┐ 
   Bob                        │ │                                                                 │ 
                    ╭──────────────────────── palette ─────────────────────────╮                  │ 
                    │  ›                                                       │                  │ 
                    │  ──────────────────────────────────────────────────────  │                  │ 
                    │  ▏ Alice Müller                                          │                  │ 
                    │    Team Rust                                             │                  │ 
                    │    Toggle theme                                     cmd  │                  │ 
                    │    Telemetry settings                               cmd  │                  │ 
                    │    Send file                                        cmd  │                  │ 
                    │    Log out                                          cmd  │                  │ 
                    │    Quit                                             cmd  │                  │ 
                    │                                                          │                  │ 
                    │                                                          │                  │ 
                    │                                                          │                  │ 
                    │                                                          │                  │ 
                    │                                                          │                  │ 
                    │                                                          │                  │ 
                    │                                                          │                  │ 
                    ╰──────────────────────────────────────────────────────────╯──────────────────┘ 
                              │                                                                     
                              │ ╭─────────────────────────────────────────────────────────────────╮ 
                              │ │ ›  message…                                                     │ 
                              │ ╰─────────────────────────────────────────────────────────────────╯ 
                                                                                                    
 type to search   ⏎ run   esc cancel
