crates/ui/tests/snapshots/snapshots__palette_query_results_with_match_highlighting_140x40.snap
---
source: crates/ui/tests/snapshots.rs
expression: "render(140, 40, &state)"
---
                              │                                                                                                             
 CHATS                        │ telegram-tui                                                                                                
                              ├─────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ▏ Alice Müller             2 │                                                                                                             
   Team Rust                9 │                                                                                                             
   Bob                        │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │         ╭──────────────────────── palette ─────────────────────────╮                                        
                              │         │  › al                                                    │                                        
                              │         │  ──────────────────────────────────────────────────────  │                                        
                              │         │  ▏ Alice Müller                                          │                                        
                              │         │    Toggle theme                                     cmd  │                                        
                              │         │                                                          │                                        
                              │         │                                                          │                                        
                              │         │                                                          │                                        
                              │         │                                                          │                                        
                              │         │                                                          │                                        
                              │         │                                                          │                                        
                              │         │                                                          │                                        
                              │         │                                                          │                                        
                              │         │                                                          │                                        
                              │         │                                                          │                                        
                              │         │                                                          │                                        
                              │         │                                                          │                                        
                              │         │                                                          │                                        
                              │         │                                                          │                                        
                              │         │                                                          │                                        
                              │         │                                                          │                                        
                              │         │                                                          │                                        
                              │         │                                                          │                                        
                              │         ╰──────────────────────────────────────────────────────────╯                                        
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │ ╭─────────────────────────────────────────────────────────────────────────────────────────────────────────╮ 
                              │ │ ›  message…                                                                                             │ 
                              │ ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────╯ 
                                                                                                                                            
 type to search   ⏎ run   esc cancel
